# biomodelml

./: .gitignore  BUG_FIX_COMPLETE.md  DEEP_SEARCH_BUG_FIXES.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  check_trees.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_optflow_comparison.py
biomodelml/: __init__.py  __version__.py  datasets.py  datasets_4ch.py  experiment.py  matrices.py  models.py  models_4ch.py  sanitize.py  simulation.py
biomodelml/cli/: __init__.py  clusterize.py  evaluate_siamese.py  generate_evolutionary_dataset.py  matchmatrix.py  migrate_to_hdf5.py  optimize.py  prepare_dataset.py  sanitize.py  train_siamese.py  train_siamese_4ch.py  tree_builder.py  visualize_4ch_data.py
biomodelml/variants/: __init__.py  baselines.py  control.py  greedy_ssim.py  nw.py  resized_ssim.py  resized_ssim_multiscale.py  siamese.py  ssim_base.py  ssim_multiscale_base.py  sw.py  unrestricted_ssim.py  uqi.py  variant.py  windowed_ssim_multiscale.py
biomodelml/variants/deep_search/: feature_extractor.py  indexer.py  variant.py
biomodelml/variants/optical_flow/: __init__.py  aggregator.py  flow_computer.py  variant.py
data/: example_sequences.fasta  indelible.fasta  orthologs_androglobin.fasta  orthologs_cytoglobin.fasta  orthologs_hemoglobin_beta.fasta  orthologs_myoglobin.fasta  orthologs_neuroglobin.fasta
notebooks/: BioModelML_Validation.ipynb  Test_BioModelML.ipynb
output_myoglobin/orthologs_myoglobin/: Global with Needleman-Wunsch.csv  Global with Needleman-Wunsch.nw  Greedy Sliced Structural Similarity Index Measure.csv  Greedy Sliced Structural Similarity Index Measure.map  Greedy Sliced Structural Similarity Index Measure.nw  Resized MultiScale Structural Similarity Index Measure.csv  Resized Structural Similarity Index Measure.csv  Universal Quality Index.csv  Universal Quality Index.nw  Unrestricted Sliced Structural Similarity Index Measure.csv  Unrestricted Sliced Structural Similarity Index Measure.map  Windowed MultiScale Structural Similarity Index Measure.csv  Windowed MultiScale Structural Similarity Index Measure.map
output_test_new/: Global with Needleman-Wunsch.csv  Global with Needleman-Wunsch.nw  Local with Smith–Waterman.csv  Local with Smith–Waterman.nw
tests/: README_evolution_demo.md  benchmark_phase1.py  conftest.py  demo_evolution_analysis.py  demo_evolution_analysis_backup.py  diagnose_indel_issue.py  test_deep_search_fix.py  test_experiment.py  test_matchmatrix.py  test_sanitize_seqs.py  tree_comparison.py
