[metadata]
name = biomodelml
version = 0.1.0
author = BioBD Team
description = Bioinformatics framework for sequence analysis using self-comparison matrices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BioBD/biomodelml
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.8,<3.12
install_requires =
    pandas>=1.3.2
    scipy>=1.5.4
    numpy>=1.20.3,<2.0.0
    biotite>=0.30.0,<0.40.0
    biopython>=1.79
    matplotlib>=3.4.3
    ete3>=3.1.0,<4.0.0

[options.packages.find]
exclude =
    tests*
    notebooks*
    data*
    scripts*

[options.extras_require]
full =
    tensorflow-cpu>=2.8.0,<3.0.0
    opencv-python>=4.5.4.60
    sewar==0.4.4
    annoy==1.17.0
    ppscore>=1.2.0
gpu =
    tensorflow>=2.8.0,<3.0.0
    opencv-python>=4.5.4.60
    sewar==0.4.4
    annoy==1.17.0
    ppscore>=1.2.0
optimization =
    optuna>=2.10.0,<3.1
dev =
    pytest>=7.1.2
    pytest-cov>=3.0.0
    black>=22.0.0
    flake8>=4.0.0
    mypy>=0.950
docs =
    sphinx>=4.5.0
    sphinx-rtd-theme>=1.0.0
all =
    biomodelml[full,optimization,dev,docs]

[options.entry_points]
console_scripts =
    biomodelml-sanitize = biomodelml.cli.sanitize:main
    biomodelml-matchmatrix = biomodelml.cli.matchmatrix:main
    biomodelml-tree = biomodelml.cli.tree_builder:main
    biomodelml-optimize = biomodelml.cli.optimize:main
    biomodelml-clusterize = biomodelml.cli.clusterize:main
